Shooting animations lines cleanup.